[TASK] Start using javafx