@@ -1,1 +1,5 @@
 # bikeStore
+
+```
+--module-path ${PATH_TO_FX} --add-modules=javafx.controls,javafx.fxml
+```
